# SocketSparrow

./: CMakeLists.txt  Doxyfile  Jenkinsfile  README.md  SocketSparrowConfig.cmake  sonar-project.properties
include/: Endpoint.hpp  Enums.hpp  Exceptions.hpp  Socket.hpp  SocketSparrow.hpp  TLSSocket.hpp  UDPPacket.hpp  Util.hpp
source/: Endpoint.cpp  Exceptions.cpp  Socket.cpp  TLSSocket.cpp  UDPPacket.cpp  Util.cpp
tests/: CMakeLists.txt  Mocking.cpp  Mocking.hpp  SocketMocking.cpp  SocketMocking.hpp  test_Endpoint.cpp  test_Exceptions.cpp  test_Socket.cpp  test_TLSSocket.cpp  test_Utils.cpp  test_main.cpp
